Update HAPI to 8.2.0